#-------------------------
# Crow's foot notation example
#-------------------------

@startuml
!theme mono
hide circle
skinparam linetype ortho
skinparam defaultFontName Arial

entity PERSON {
  * person_id : int <<PK>>
  --
  * first_name : varchar
    middle_name : varchar
  * last_name : varchar
  * date_of_birth : date
    street : varchar
    city : varchar
    state : char(2)
    zip : char(5)
}

entity DEPARTMENT {
  * dept_id : varchar <<PK>>
  --
  * dept_name : varchar
    building : varchar
    budget : numeric
}

entity COURSE {
  * course_id : varchar <<PK>>
  --
  * title : varchar
  * credits : int
    level : varchar
}

entity ROOM {
  * room_id : varchar <<PK>>
  --
  * building : varchar
  * room_number : varchar
  * capacity : int
    room_type : varchar
}
@enduml

#-------------------------
# Step1: Mapping strong entities
#-------------------------

@startuml
!theme mono
hide circle
skinparam linetype ortho
skinparam defaultFontName Arial

entity PERSON {
  * person_id : int <<PK>>
  --
  * first_name : varchar
    middle_name : varchar
  * last_name : varchar
  * date_of_birth : date
    street : varchar
    city : varchar
    state : char(2)
    zip : char(5)
}

entity DEPARTMENT {
  * dept_id : varchar <<PK>>
  --
  * dept_name : varchar
    building : varchar
    budget : numeric
}

entity COURSE {
  * course_id : varchar <<PK>>
  --
  * title : varchar
  * credits : int
    level : varchar
}

entity ROOM {
  * room_id : varchar <<PK>>
  --
  * building : varchar
  * room_number : varchar
  * capacity : int
    room_type : varchar
}
@enduml


#-------------------------
# Step2: Mapping weak entities
#-------------------------
@startuml
!theme mono
hide circle
skinparam linetype ortho
skinparam defaultFontName Arial

entity COURSE {
  * course_id : varchar <<PK>>
  --
  * title : varchar
  * credits : int
    level : varchar
}

entity COURSE_SECTION <<weak>> {
  * course_id : varchar <<PK, FK>>
  * section_no : varchar <<PK>>
  --
  * semester : varchar
  * year : int
    capacity : int
    schedule : varchar
}

COURSE ||--|{ COURSE_SECTION : "has"
@enduml

#-------------------------
# Step3: 1:1
#-------------------------
@startuml
!theme mono
hide circle
skinparam linetype ortho
skinparam defaultFontName Arial

entity DEPARTMENT {
  * dept_id : varchar <<PK>>
  --
  * dept_name : varchar
    building : varchar
    budget : numeric
  * chair_id : int <<FK, UNIQUE>>
}

entity PROFESSOR {
  * person_id : int <<PK>>
  --
  * professor_id : varchar <<UK>>
  * rank_code : varchar
  * hire_date : date
    salary : numeric
  * dept_id : varchar <<FK>>
}

note bottom of DEPARTMENT
  **Step 3: Binary 1:1**
  PROFESSOR --CHAIRS-- DEPARTMENT
  ..
  DEPARTMENT has **total** participation
  (every dept must have a chair).
  PROFESSOR has **partial** participation
  (a professor chairs 0 or 1 dept).
  ..
  FK goes on the **total** side (DEPARTMENT).
  **chair_id** references PROFESSOR(person_id)
  with a UNIQUE constraint to enforce 1:1.
end note

PROFESSOR |o--|| DEPARTMENT : "chairs"
@enduml


#-------------------------
# Step4: 1:N
#-------------------------
@startuml
!theme mono
hide circle
skinparam linetype ortho
skinparam defaultFontName Arial

entity DEPARTMENT {
  * dept_id : varchar <<PK>>
  --
  * dept_name : varchar
    building : varchar
    budget : numeric
  * chair_id : int <<FK, UNIQUE>>
}

entity PROFESSOR {
  * person_id : int <<PK>>
  --
  * professor_id : varchar <<UK>>
  * rank_code : varchar
  * hire_date : date
    salary : numeric
  * dept_id : varchar <<FK>>
}

entity COURSE {
  * course_id : varchar <<PK>>
  --
  * title : varchar
  * credits : int
    level : varchar
  * dept_id : varchar <<FK>>
}

entity COURSE_SECTION <<weak>> {
  * course_id : varchar <<PK, FK>>
  * section_no : varchar <<PK>>
  --
  * semester : varchar
  * year : int
    capacity : int
    schedule : varchar
  * professor_person_id : int <<FK>>
}

entity STUDENT {
  * person_id : int <<PK>>
  --
  * student_id : varchar <<UK>>
  * enrollment_year : int
  * gpa : numeric
  * advisor_person_id : int <<FK>>
}

DEPARTMENT ||--|{ PROFESSOR : "belongs_to"
DEPARTMENT ||--|{ COURSE : "offers"
PROFESSOR ||--|{ COURSE_SECTION : "teaches"
PROFESSOR ||--|{ STUDENT : "advised_by"
COURSE ||--|{ COURSE_SECTION : "has"
@enduml


#-------------------------
# Step5: M:N
#-------------------------
@startuml
!theme mono
hide circle
skinparam linetype ortho
skinparam defaultFontName Arial

entity STUDENT {
  * person_id : int <<PK>>
  --
  * student_id : varchar <<UK>>
  * enrollment_year : int
    gpa : numeric
  * advisor_person_id : int <<FK>>
}

entity COURSE_SECTION <<weak>> {
  * course_id : varchar <<PK, FK>>
  * section_no : varchar <<PK>>
  --
  * semester : varchar
  * year : int
    capacity : int
    schedule : varchar
  * professor_person_id : int <<FK>>
}

entity ENROLLMENT <<junction>> {
  * student_person_id : int <<PK, FK>>
  * course_id : varchar <<PK, FK>>
  * section_no : varchar <<PK, FK>>
  --
    grade : varchar
    enroll_date : date
}

entity COURSE {
  * course_id : varchar <<PK>>
  --
  * title : varchar
  * credits : int
    level : varchar
}

entity COURSE_PREREQ <<junction>> {
  * course_id : varchar <<PK, FK>>
  * prereq_id : varchar <<PK, FK>>
  --
}

STUDENT ||--|{ ENROLLMENT : "enrolls"
COURSE_SECTION ||--|{ ENROLLMENT : "has"
COURSE ||--|{ COURSE_PREREQ : "requires"
COURSE ||--|{ COURSE_PREREQ : "is prereq for"
@enduml

#-------------------------
# Step6
#-------------------------
@startuml
!theme mono
hide circle
skinparam linetype ortho
skinparam defaultFontName Arial

entity PERSON {
  * person_id : int <<PK>>
  --
  * first_name : varchar
    middle_name : varchar
  * last_name : varchar
  * date_of_birth : date
    street : varchar
    city : varchar
    state : char(2)
    zip : char(5)
}

entity PERSON_PHONE {
  * person_id : int <<PK, FK>>
  * phone_number : varchar <<PK>>
  --
}

entity PROFESSOR {
  * person_id : int <<PK>>
  --
  * professor_id : varchar <<UK>>
  * rank_code : varchar
  * hire_date : date
    salary : numeric
  * dept_id : varchar <<FK>>
}

entity PROF_SPECIALIZATION {
  * person_id : int <<PK, FK>>
  * specialization : varchar <<PK>>
  --
}

entity STUDENT {
  * person_id : int <<PK>>
  --
  * student_id : varchar <<UK>>
  * enrollment_year : int
    gpa : numeric
  * advisor_person_id : int <<FK>>
}

entity STUDENT_DEGREE {
  * person_id : int <<PK, FK>>
  * degree_type : varchar <<PK>>
  * institution : varchar <<PK>>
  --
    year : int
}

PERSON ||--o{ PERSON_PHONE : "has"
PROFESSOR ||--o{ PROF_SPECIALIZATION : "has"
STUDENT ||--o{ STUDENT_DEGREE : "has"
@enduml

#------
# Step 7
#-------

@startuml
!theme mono
hide circle
skinparam linetype ortho
skinparam defaultFontName Arial

entity GRAD_STUDENT {
  * person_id : int <<PK>>
  --
  * student_id : varchar <<UK>>
  * program : varchar
  * advisor_person_id : int <<FK>>
}

entity COURSE_SECTION <<weak>> {
  * course_id : varchar <<PK, FK>>
  * section_no : varchar <<PK>>
  --
  * semester : varchar
  * year : int
    capacity : int
    schedule : varchar
}

entity PROFESSOR {
  * person_id : int <<PK>>
  --
  * professor_id : varchar <<UK>>
  * rank_code : varchar
  * dept_id : varchar <<FK>>
}

entity TA_ASSIGNMENT <<ternary>> {
  * course_id : varchar <<PK, FK>>
  * section_no : varchar <<PK, FK>>
  --
  * grad_person_id : int <<FK>>
  * professor_person_id : int <<FK>>
}

GRAD_STUDENT ||--o{ TA_ASSIGNMENT : "assigned as TA"
COURSE_SECTION ||--|| TA_ASSIGNMENT : "has TA"
PROFESSOR ||--o{ TA_ASSIGNMENT : "supervises"
@enduml

#-------- Category
@startuml
!theme mono
hide circle
skinparam linetype ortho
skinparam defaultFontName Arial

entity PERSON {
  * ssn : varchar <<PK>>
  --
  * name : varchar
    address : varchar
}

entity COMPANY {
  * tax_id : varchar <<PK>>
  --
  * company_name : varchar
    headquarters : varchar
}

entity BANK {
  * routing_number : varchar <<PK>>
  --
  * bank_name : varchar
    branch : varchar
}

entity VEHICLE_OWNER <<category>> {
  * owner_id : int <<PK, surrogate>>
  --
  * owner_type : varchar
    person_ssn : varchar <<FK, nullable>>
    company_tax_id : varchar <<FK, nullable>>
    bank_routing_no : varchar <<FK, nullable>>
  * ownership_date : date
}

PERSON ||--o| VEHICLE_OWNER : "can be"
COMPANY ||--o| VEHICLE_OWNER : "can be"
BANK ||--o| VEHICLE_OWNER : "can be"

@enduml
